--- a/public/main.htm
+++ b/public/main.htm
@@ -1,1 +1,4 @@
-test here
+<div style="text-align: center; padding: 15px;">
+    <h1>template.</h1>
+    <p>Everything working <span class="color-green">fine.</span></p>
+</div>
